# code_trainings

./: README.md
practice-c/: fdpassing.c  msgQueueSysV.c  pipe.c
practice-c/arrays/: CMakeLists.txt  array.c  array.h  main.c
practice-c/ato/: atof.c
practice-c/data_structures/linked_list/single/: single_linked_list.c
practice-c/grep/: grep.c
practice-c/kern-ritch/: cat_v1.c  file.c  file.h  hashStruct.c  memory.c  print_at_same_position.c
practice-cpp/algorithms/binary_search/: binary_search.cpp
practice-cpp/algorithms/heap_sort/: heap_sort.cpp
practice-cpp/algorithms/majority_element/: majority_element.cpp
practice-cpp/algorithms/network_processing_simulation/: process_packages.cpp
practice-cpp/algorithms/quick_sort/: quick3_sort.cpp
practice-cpp/algorithms/tree_height/: tree-height.cpp
practice-cpp/cache/: lrucache.cpp
practice-cpp/dstruct/array/: array.hpp
practice-cpp/dstruct/priority_queue/: pqueue.cpp
practice-cpp/dstruct/stack/algorithms/: check_brackets.cpp
practice-cpp/dstruct/vector/: vector.cpp
practice-cpp/http/: CMakeLists.txt
practice-cpp/http/lib/: Time.h  cmdArgs.h  server.h  session.cpp  session.h
practice-cpp/network/boostasio/: echo_server.cpp
practice-cpp/network/httpServerBoost/: CMakeLists.txt  boost.cmake  main.cpp
practice-cpp/network/httpServerBoost/lib/: server.cpp  server.h  session.cpp  session.h
practice-cpp/network/libev/: echo_server.c
practice-cpp/network/libuv/: echo_server.c
practice-cpp/network/sockets/: tcp_client.c  tcp_server.c
